--- a/lsio/standard/webgrabplus/docker-compose.yaml
+++ b/lsio/standard/webgrabplus/docker-compose.yaml
@@ -23,6 +23,6 @@ services:
       # Where webgrabplus should store it's data files.
       - ${BASEDIR:-/volume1/docker}/webgrabplus/data:/data
     ports:
-      # Application WebUI
-      - 80:80
+      # Plex WebUI
+      - 32400:32400
     restart: unless-stopped
