--- a/lsio/custom/airsonic-advanced/docker-compose.yaml
+++ b/lsio/custom/airsonic-advanced/docker-compose.yaml
@@ -18,9 +18,8 @@ services:
       # - CONTEXT_PATH= # optional
       # - JAVA_OPTS= # optional
     volumes:
+      - ${DOCKERCONFIGPATH:-/volume1/docker/appdata}/airsonic-advanced${DOCKERCONFIGDIR:-}:/config
       - ${DOCKERSTORAGEPATH:-/volume1/data}/media:${DOCKERMOUNTPATH:-/mnt/data}/media
-      # Location of other media.
-      - ${DOCKERCONFIGPATH:-/volume1/docker/appdata}/airsonic-advanced/media:/media
     # ports:
       # # WebUI
       # - 4040:4040
