--- a/lsio/custom/bazarr/docker-compose.yaml
+++ b/lsio/custom/bazarr/docker-compose.yaml
@@ -17,6 +17,7 @@ services:
     volumes:
       - ${DOCKERCONFIGPATH:-/volume1/docker/appdata}/bazarr${DOCKERCONFIGDIR:-}:/config
       - ${DOCKERSTORAGEPATH:-/volume1/data}/media:${DOCKERMOUNTPATH:-/mnt/data}/media
+      - ${DOCKERSTORAGEPATH:-/volume1/data}/media:${DOCKERMOUNTPATH:-/mnt/data}/media
     # ports:
       # # Allows HTTP access to the internal webserver.
       # - 6767:6767
