--- a/lsio/custom/deluge/docker-compose.yaml
+++ b/lsio/custom/deluge/docker-compose.yaml
@@ -15,6 +15,7 @@ services:
       - TZ=${TZ:-America/Chicago}
       # - DELUGE_LOGLEVEL=error # optional
     volumes:
+      - ${DOCKERCONFIGPATH:-/volume1/docker/appdata}/deluge${DOCKERCONFIGDIR:-}:/config
       - ${DOCKERSTORAGEPATH:-/volume1/data}/downloads:${DOCKERMOUNTPATH:-/mnt/data}/downloads
     # ports:
       # # Port for webui
