--- a/lsio/custom/emby/docker-compose.yaml
+++ b/lsio/custom/emby/docker-compose.yaml
@@ -14,6 +14,7 @@ services:
       - UMASK=${UMASK:-002}
       - TZ=${TZ:-America/Chicago}
     volumes:
+      - ${DOCKERCONFIGPATH:-/volume1/docker/appdata}/emby${DOCKERCONFIGDIR:-}:/config
       - ${DOCKERSTORAGEPATH:-/volume1/data}/media:${DOCKERMOUNTPATH:-/mnt/data}/media
       # Path for Raspberry Pi OpenMAX libs *optional*.
       - /opt/vc/lib:/opt/vc/lib
