--- a/lsio/custom/jackett/docker-compose.yaml
+++ b/lsio/custom/jackett/docker-compose.yaml
@@ -20,6 +20,7 @@ services:
       # - AUTO_UPDATE=true # optional
       # - RUN_OPTS= # optional
     volumes:
+      - ${DOCKERCONFIGPATH:-/volume1/docker/appdata}/jackett${DOCKERCONFIGDIR:-}:/config
       - ${DOCKERSTORAGEPATH:-/volume1/data}/downloads:${DOCKERMOUNTPATH:-/mnt/data}/downloads
     # ports:
       # # WebUI
