--- a/lsio/custom/jellyfin/docker-compose.yaml
+++ b/lsio/custom/jellyfin/docker-compose.yaml
@@ -20,6 +20,7 @@ services:
       - TZ=${TZ:-America/Chicago}
       # - JELLYFIN_PublishedServerUrl=http://192.168.0.5 # optional
     volumes:
+      - ${DOCKERCONFIGPATH:-/volume1/docker/appdata}/jellyfin${DOCKERCONFIGDIR:-}:/config
       - ${DOCKERSTORAGEPATH:-/volume1/data}/media:${DOCKERMOUNTPATH:-/mnt/data}/media
     # ports:
       # # Http webUI.
