--- a/lsio/custom/mstream/docker-compose.yaml
+++ b/lsio/custom/mstream/docker-compose.yaml
@@ -14,6 +14,7 @@ services:
       - UMASK=${UMASK:-002}
       - TZ=${TZ:-America/Chicago}
     volumes:
+      - ${DOCKERCONFIGPATH:-/volume1/docker/appdata}/mstream${DOCKERCONFIGDIR:-}:/config
       - ${DOCKERSTORAGEPATH:-/volume1/data}/media:${DOCKERMOUNTPATH:-/mnt/data}/media
     # ports:
       # # The port for the mStream web interface
