--- a/lsio/custom/pyload-ng/docker-compose.yaml
+++ b/lsio/custom/pyload-ng/docker-compose.yaml
@@ -14,6 +14,7 @@ services:
       - UMASK=${UMASK:-002}
       - TZ=${TZ:-America/Chicago}
     volumes:
+      - ${DOCKERCONFIGPATH:-/volume1/docker/appdata}/pyload-ng${DOCKERCONFIGDIR:-}:/config
       - ${DOCKERSTORAGEPATH:-/volume1/data}/downloads:${DOCKERMOUNTPATH:-/mnt/data}/downloads
     # ports:
       # # Allows HTTP access to the application
