--- a/lsio/custom/sabnzbd/docker-compose.yaml
+++ b/lsio/custom/sabnzbd/docker-compose.yaml
@@ -17,6 +17,7 @@ services:
     volumes:
       - ${DOCKERCONFIGPATH:-/volume1/docker/appdata}/sabnzbd${DOCKERCONFIGDIR:-}:/config
       - ${DOCKERSTORAGEPATH:-/volume1/data}/downloads:${DOCKERMOUNTPATH:-/mnt/data}/downloads
+      - ${DOCKERSTORAGEPATH:-/volume1/data}/downloads:${DOCKERMOUNTPATH:-/mnt/data}/downloads
     # ports:
       # # HTTP port for the WebUI.
       # - 8080:8080
