--- a/lsio/custom/sickgear/docker-compose.yaml
+++ b/lsio/custom/sickgear/docker-compose.yaml
@@ -15,7 +15,9 @@ services:
       - UMASK=${UMASK:-002}
       - TZ=${TZ:-America/Chicago}
     volumes:
-      - ${DOCKERSTORAGEPATH:-/volume1/data}:${DOCKERMOUNTPATH:-/mnt/data}
+      - ${DOCKERCONFIGPATH:-/volume1/docker/appdata}/sickgear${DOCKERCONFIGDIR:-}:/config
+      - ${DOCKERSTORAGEPATH:-/volume1/data}/media:${DOCKERMOUNTPATH:-/mnt/data}/media
+      - ${DOCKERSTORAGEPATH:-/volume1/data}/downloads:${DOCKERMOUNTPATH:-/mnt/data}/downloads
     # ports:
       # # will map the container's port 8081 to port 8081 on the host
       # - 8081:8081
