--- a/lsio/standard/plex/docker-compose.yaml
+++ b/lsio/standard/plex/docker-compose.yaml
@@ -29,4 +29,6 @@ services:
       # Media goes here. Add as many as needed e.g. `/movies`, `/tv`, etc.
       - ${BASEDIR:-/volume1/docker}/plex/movies:/movies
     ports:
+      # Application WebUI
+      - 80:80
     restart: unless-stopped
