--- a/lsio/custom/pylon/docker-compose.yaml
+++ b/lsio/custom/pylon/docker-compose.yaml
@@ -19,8 +19,8 @@ services:
       # - PYPASS=mypass # optional
     volumes:
       - ${DOCKERCONFIGPATH:-/volume1/docker/appdata}/pylon${DOCKERCONFIGDIR:-}:/config
-      # Optionally if you want the bind mount your own code and have changes survive container upgrades.
-      - ${DOCKERCONFIGPATH:-/volume1/docker/appdata}/pylon/code:/code
+      ## Optionally if you want the bind mount your own code and have changes survive container upgrades.
+      # - ${DOCKERCONFIGPATH:-/volume1/docker/appdata}/pylon/code:/code
     # ports:
       # # The port for the Pylon web interface
       # - 3131:3131
