--- a/lsio/custom/transmission/docker-compose.yaml
+++ b/lsio/custom/transmission/docker-compose.yaml
@@ -24,8 +24,8 @@ services:
     volumes:
       - ${DOCKERCONFIGPATH:-/volume1/docker/appdata}/transmission${DOCKERCONFIGDIR:-}:/config
       - ${DOCKERSTORAGEPATH:-/volume1/data}/downloads:${DOCKERMOUNTPATH:-/mnt/data}/downloads
-      # Watch folder for torrent files.
-      - ${DOCKERCONFIGPATH:-/volume1/docker/appdata}/transmission/watch:/watch
+      ## Watch folder for torrent files.
+      # - ${DOCKERCONFIGPATH:-/volume1/docker/appdata}/transmission/watch:/watch
     # ports:
       # # WebUI
       # - 9091:9091
