--- a/lsio/custom/apprise-api/docker-compose.yaml
+++ b/lsio/custom/apprise-api/docker-compose.yaml
@@ -20,8 +20,8 @@ services:
       # - APPRISE_ATTACH_SIZE=0 # optional
     volumes:
       - ${DOCKERCONFIGPATH:-/volume1/docker/appdata}/apprise-api${DOCKERCONFIGDIR:-}:/config
-      # Temporary storage for attachments when sent with notifications.
-      - ${DOCKERCONFIGPATH:-/volume1/docker/appdata}/apprise-api/attachments:/attachments
+      ## Temporary storage for attachments when sent with notifications.
+      # - ${DOCKERCONFIGPATH:-/volume1/docker/appdata}/apprise-api/attachments:/attachments
     # ports:
       # # Port for apprise's interface and API.
       # - 8000:8000
