--- a/lsio/custom/kasm/docker-compose.yaml
+++ b/lsio/custom/kasm/docker-compose.yaml
@@ -24,8 +24,8 @@ services:
     volumes:
       # Docker and installation storage.
       - ${DOCKERCONFIGPATH:-/volume1/docker/appdata}/kasm/opt:/opt
-      # Optionally specify a path for persistent profile storage.
-      - ${DOCKERCONFIGPATH:-/volume1/docker/appdata}/kasm/profiles:/profiles
+      ## Optionally specify a path for persistent profile storage.
+      # - ${DOCKERCONFIGPATH:-/volume1/docker/appdata}/kasm/profiles:/profiles
       # Optional for gamepad support.
       - /dev/input:/dev/input
       # Optional for gamepad support.
