--- a/lsio/custom/lazylibrarian/docker-compose.yaml
+++ b/lsio/custom/lazylibrarian/docker-compose.yaml
@@ -18,8 +18,8 @@ services:
     volumes:
       - ${DOCKERCONFIGPATH:-/volume1/docker/appdata}/lazylibrarian${DOCKERCONFIGDIR:-}:/config
       - ${DOCKERSTORAGEPATH:-/volume1/data}/downloads:${DOCKERMOUNTPATH:-/mnt/data}/downloads
-      # Books location
-      - ${DOCKERCONFIGPATH:-/volume1/docker/appdata}/lazylibrarian/books:/books
+      ## Books location
+      # - ${DOCKERCONFIGPATH:-/volume1/docker/appdata}/lazylibrarian/books:/books
     # ports:
       # # The port for the LazyLibrarian webinterface
       # - 5299:5299
