--- a/lsio/custom/rsnapshot/docker-compose.yaml
+++ b/lsio/custom/rsnapshot/docker-compose.yaml
@@ -16,8 +16,8 @@ services:
       - TZ=${TZ:-America/Chicago}
     volumes:
       - ${DOCKERCONFIGPATH:-/volume1/docker/appdata}/rsnapshot${DOCKERCONFIGDIR:-}:/config
-      # Storage location for all snapshots.
-      - ${DOCKERCONFIGPATH:-/volume1/docker/appdata}/rsnapshot/.snapshots:/.snapshots
+      ## Storage location for all snapshots.
+      # - ${DOCKERCONFIGPATH:-/volume1/docker/appdata}/rsnapshot/.snapshots:/.snapshots
       - ${DOCKERSTORAGEPATH:-/volume1/data}:${DOCKERMOUNTPATH:-/mnt/data}
     # ports:
       # # Application WebUI
